--- a/src/executor/CMakeLists.txt
+++ b/src/executor/CMakeLists.txt
@@ -11,7 +11,6 @@ target_include_directories(venus_executor_library PUBLIC
 add_library(venus::executor ALIAS venus_executor_library)
 
 add_executable(executor_test
-  test/chono_test.cpp
   test/executor_test.cpp
 )
 
@@ -21,4 +20,18 @@ PRIVATE
   GTest::gtest
   GTest::gtest_main
   venus::executor
+)
+
+add_executable(chrono_test
+  test/chrono_main_test.cpp
+  test/support.cpp
+  test/chono_rtc_test.cpp
+  test/chono_timezone_test.cpp
+)
+
+target_link_libraries(chrono_test
+PRIVATE
+  fmt::fmt
+  GTest::gtest
+  GTest::gtest_main
 )
