--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,36 +5,17 @@ cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
 enable_testing()
 include(CTest)
 
-if (NOT BUILD_IN_TREE)
+#
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-    message(STATUS "Building ${PROJECT_NAME} as standalone project")
-
-    include(FetchContent)
-
-    set(CMAKE_CXX_STANDARD 14)
-    set(CMAKE_CXX_STANDARD_REQUIRED ON)
-    set(CMAKE_CXX_EXTENSIONS OFF)
-
-    message(STATUS "Fetch content for FMT")
-    FetchContent_Declare(fmt
-      GIT_REPOSITORY https://github.com/fmtlib/fmt.git
-      GIT_TAG 8.1.1
-    )
-    FetchContent_MakeAvailable(fmt)
-
-    FetchContent_Declare(googletest
-      GIT_REPOSITORY https://github.com/google/googletest.git
-      GIT_TAG v1.15.2
-    )
-    FetchContent_MakeAvailable(googletest)
-
-endif()
+include(CMakeLists.fmt.cmake)
+include(CMakeLists.googletest.cmake)
 
 find_package(Threads REQUIRED)
-include(CMakeLists.warnings.cmake)
 
-# workaround for {fmt} on gcc14
-add_compile_options(-Wno-dangling-reference)
+include(CMakeLists.warnings.cmake)
 
 #add_compile_options(-fsanitize=address)
 #add_link_options(-fsanitize=address)
